--- a/index.html
+++ b/index.html
@@ -1,7 +1,335 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PH7QEJSFED"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-PH7QEJSFED');
+  </script>
+
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Risk Panda</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="assets/vendor/modal-video/css/modal-video.min.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: eStartup - v3.0.0
+  * Template URL: https://bootstrapmade.com/estartup-bootstrap-landing-page-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>Test</p>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="header">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <div id="logo">
+        <h1><a href="index.html">risk-panda.com</a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>-->
+      </div>
+
+      <nav id="nav-menu-container">
+        <ul class="nav-menu">
+          <li class="menu-active"><a href="index.html">Home</a></li>
+          <li><a href="#about-us">FAQ</a></li>
+          <li><a href="#pricing">Pricing</a></li>
+          <li><a href="#testimonials">Advanced Courses</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav><!-- #nav-menu-container -->
+    </div>
+  </header><!-- End Header -->
+
+  <!-- ======= Image Section ======= -->
+  <section id="hero">
+    <div class="hero-container" data-aos="fade-in">
+      <h1>Trading Made Simple</h1>
+      <h2>Simple trading signal, delivered daily</h2>
+      <img src="assets/img/cagr.png" alt="cagr" data-aos="zoom-out" data-aos-delay="100" width="1200">
+      <a href="#pricing" class="btn-get-started scrollto">FREE 1-Month Trial</a>
+    </div>
+  </section><!-- End Image Section -->
+
+  <main id="main">
+
+    <!-- ======= Get Started Section ======= -->
+    <section id="get-started" class="padd-section text-center">
+
+      <div class="container">
+        <div class="row">
+
+          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="100">
+            <div class="feature-block">
+
+              <img src="assets/img/svg/cloud.svg" alt="img" class="img-fluid">
+              <h4>Principle</h4>
+              <p>Exit the market when risk is high, otherwise stay in the market. Managing risk is our top priority.</p>
+
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="200">
+            <div class="feature-block">
+
+              <img src="assets/img/svg/planet.svg" alt="img" class="img-fluid">
+              <h4>Goal</h4>
+              <p>Great return, low drawdown, in LONG term.</p>
+
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
+            <div class="feature-block">
+
+              <img src="assets/img/svg/asteroid.svg" alt="img" class="img-fluid">
+              <h4>Relief</h4>
+              <p>Simple signal, easy to follow, with confidence.</p>
+
+          </div>
+
+        </div>
+      </div>
+
+    </section><!-- End Get Started Section -->
+
+    <!-- ======= About Us Section ======= -->
+    <section id="about-us" class="about-us padd-section">
+      <div class="container" data-aos="fade-up">
+        <div class="row justify-content-center">
+
+          <div class="col-md-5 col-lg-4">
+            <img src="assets/img/pie.png" alt="About" data-aos="zoom-in" data-aos-delay="100">
+          </div>
+
+          <div class="col-md-7 col-lg-5">
+            <div class="about-content" data-aos="fade-left" data-aos-delay="100">
+
+              <h2><span>FAQ</span></h2>
+
+              <ul class="list-unstyled">
+
+                <li><i class="fa fa-chevron-circle-right"></i><b>Trading frequency?</b><br />
+                - Low. Usually &lt;5 trades in one month.</li>
+
+                <li><i class="fa fa-chevron-circle-right"></i><b>How are the trading signals delivered?</b><br />
+                - By email.</li>
+
+                <li><i class="fa fa-chevron-circle-right"></i><b>What to trade?</b><br />
+                - Usually Nasdaq-100 ETFs, like QQQ or QLD, based on your risk tolerance. Details are in signal emails.
+                  We are also planning for options in the future.</li>
+
+                <li><i class="fa fa-chevron-circle-right"></i><b>If too many people follow, will the strategy be invalid?</b><br />
+                - We limit the number of strategy subscribers. So claim your position early.</li>
+
+                <li><i class="fa fa-chevron-circle-right"></i><b>When is the trading signal sent, on each trading day?</b><br />
+                - Usually 20-30 minutes before market close, everyday.</li>
+
+                <li><i class="fa fa-chevron-circle-right"></i><b>How are the signals generated?</b><br />
+                - AI-powered. We will publish more info in the signal email in the future.</li>
+
+                <li><i class="fa fa-chevron-circle-right"></i><b>How much money should I put in the strategy?</b><br />
+                - Invest with a small portion of your total portfolio. This amount of money should not affect your sleep. Otherwise it's easy to not follow the strategy strictly, leading to poor performance.</li>
+
+                <li><i class="fa fa-chevron-circle-right"></i><b>Can I use the signal to trade my own stocks?</b><br />
+                - You can regard the signal as a market safety indicator (risk engine in hedge funds) and trade your own stocks, if you are an experienced trader.</li>
+
+              </ul>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section><!-- End About Us Section -->
+
+    
+    <!-- ======= Video Section ======= -->
+    <!--
+    <section id="video" class="text-center">
+      <div class="overlay">
+        <div class="container-fluid container-full" data-aos="zoom-in">
+
+          <div class="row">
+            <a href="#" class="js-modal-btn play-btn" data-video-id="s22ViV7tBKE"></a>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    -->
+
+    <!-- ======= Pricing Section ======= -->
+    <section id="pricing" class="padd-section text-center">
+
+      <div class="container" data-aos="fade-up">
+        <div class="section-title text-center">
+
+          <h2>Price</h2>
+          <p class="separator">Simple pricing. No credit card needed.</p>
+        </div>
+
+        <div class="row" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-md-6 col-lg-6">
+            <div class="block-pricing">
+              <div class="table">
+                <h4>monthly</h4>
+                <h2>$29.99</h2>
+                <ul class="list-unstyled">
+                  <li><b>$1</b>per day</li>
+                </ul>
+                <div class="table_btn">
+                  <a href="https://forms.gle/Jo1MYsQ2dqbVtpU68" class="btn"><i class="fa fa-shopping-cart"></i>FREE 1-Month Trial</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-6">
+            <div class="block-pricing">
+              <div class="table">
+                <h4>yearly</h4>
+                <h2>$299.99</h2>
+                <ul class="list-unstyled">
+                  <li><b>$0.82</b>per day</li>
+                </ul>
+                <div class="table_btn">
+                  <a href="https://forms.gle/rVteUTFmdb2sYoeFA" class="btn"><i class="fa fa-shopping-cart"></i>FREE 1-Month Trial</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section><!-- End Pricing Section -->
+
+
+
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="padd-section text-left">
+      <div class="container" data-aos="fade-up">
+        <div class="row justify-content-center">
+
+          <div class="col-md-6">
+
+            <div class="testimonials-content">
+              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
+                <div class="carousel-inner" role="listbox">
+
+                  <div class="carousel-item  active">
+                    <div class="top-top">
+
+                      <h2 class="text-center">Advanced Courses</h2>
+                      <p>We plan to provide a list of unique, advanced courses for yearly subscribers:</p>
+
+                        <ul class="list-unstyled">
+
+                          <li><i class="fa fa-chevron-circle-right"></i><b> Six market crash indicators </b></li>
+
+                          <li><i class="fa fa-chevron-circle-right"></i><b> Best strategy to sell put </b></li>
+
+                          <li><i class="fa fa-chevron-circle-right"></i><b> Best strategy for vertical spreads </b></li>
+
+                          <li><i class="fa fa-chevron-circle-right"></i><b> How to buy the dip with leverage when market crashes </b></li>
+
+                          <li><i class="fa fa-chevron-circle-right"></i><b> Long-term portfolio building </b></li>
+
+                          <li><i class="fa fa-chevron-circle-right"></i><b> Stock market rules and statistics </b></li>
+
+                          <li><i class="fa fa-chevron-circle-right"></i><b> Bitcoin strategies </b></li>
+
+                          <li><i></i> and much more ...</li>
+
+                        </ul>
+
+                    </div>
+                  </div>
+
+
+                </div>
+                
+
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section><!-- End Testimonials Section -->
+
+
+
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="padd-section">
+
+      <div class="container" data-aos="fade-up">
+        <div class="section-title text-center">
+          <h2>Contact</h2>
+          <p class="separator">Any question, <a href="https://forms.gle/cJ7TAqTr6z864esJ8">contact us!</a></p>
+        </div>
+      </div>
+    </section><!-- End Contact Section -->
+
+
+  </main><!-- End #main -->
+
+
+
+  <!-- ======= Footer ======= -->
+  <footer class="footer">
+    <div class="copyrights">
+      <div class="container">
+        <p>&copy; Risk Panda. All rights reserved.</p>
+      </div>
+    </div>
+  </footer><!-- End  Footer -->
+
+
+  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/modal-video/js/modal-video.min.js"></script>
+  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="assets/vendor/superfish/superfish.min.js"></script>
+  <script src="assets/vendor/hoverIntent/hoverIntent.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
 </body>
+
 </html>
