--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div id="logo">
-        <h1><a href="index.html">risk-panda.com</a></h1>
+        <h1><a href="index.html">risk-panda<small>.com </small></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>-->
       </div>
@@ -149,7 +149,7 @@
                 - We limit the number of strategy subscribers. So claim your position early.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>When is the trading signal sent, on each trading day?</b><br />
-                - Usually 20-30 minutes before market close, everyday.</li>
+                - Usually 20-30 minutes before market close.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>How are the signals generated?</b><br />
                 - AI-powered. We will publish more info in the signal email in the future.</li>
