--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
                 <li><i class="fa fa-chevron-circle-right"></i><b>Can I use the signal to trade my own stocks?</b><br />
                 - You can regard the signal as a market safety indicator (risk engine in hedge funds) and trade your own stocks, if you are an experienced trader.</li>
 
+                <li><i class="fa fa-chevron-circle-right"></i><b>How long has the strategy existed?</b><br />
+                - The backtesting is back to 2003. The real trading started from 2012 (end of 2011, actually).</li>
+
               </ul>
 
             </div>
