--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 - Usually 20-30 minutes before market close.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>How are the signals generated?</b><br />
-                - AI-powered. We will publish more info in the signal email in the future.</li>
+                - AI-powered. The signals may be weird for humans' understanding, but it makes profit and has low drawdown in the LONG run. We may publish more info in the signal email in the future.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>How much money should I put in the strategy?</b><br />
                 - Invest with a small portion of your total portfolio. This amount of money should not affect your sleep. Otherwise it's easy to not follow the strategy strictly, leading to poor performance.</li>
@@ -162,6 +162,12 @@
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>How long has the strategy existed?</b><br />
                 - The backtesting is back to 2003. The real trading started from 2012 (end of 2011, actually).</li>
+                
+                <li><i class="fa fa-chevron-circle-right"></i><b>Do you have other strategies?</b><br />
+                - Yes. We have more complex strategies which need some education for people to follow.</li>
+                
+                <li><i class="fa fa-chevron-circle-right"></i><b>Will you manage funds directly?</b><br />
+                - Yes. Please contact us if you need this service, with a relatively large amount of money.</li>
 
               </ul>
 
