--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
                 - By email.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>What to trade?</b><br />
-                - Usually Nasdaq-100 ETFs, like QQQ or QLD, based on your risk tolerance. Details are in signal emails.
+                - Usually Nasdaq-100 ETFs, like QQQ or QLD, or NQ/MNQ futures. based on your risk tolerance and account type. Details are in signal emails.
                   We are also planning for options in the future.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>If too many people follow, will the strategy be invalid?</b><br />
-                - We limit the number of strategy subscribers. So claim your position early.</li>
+                - Nasdaq-100 related products and their underlying holdings have HUGE trading volumes, similar to those of S&P 500. Our scale is so small compared to the market, and we have not seen any impact. However, we still limit the number of strategy subscribers to ensure a high quality.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>When is the trading signal sent, on each trading day?</b><br />
-                - Usually 20-30 minutes before market close.</li>
+                - Usually 30 minutes before market close, or one hour after market open.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>How are the signals generated?</b><br />
                 - AI-powered. The signals may be weird for humans' understanding, but it makes profit and has low drawdown in the LONG run. We may publish more info in the signal email in the future.</li>
