--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   We are also planning for options in the future.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>If too many people follow, will the strategy be invalid?</b><br />
-                - Nasdaq-100 related products and their underlying holdings have HUGE trading volumes, similar to those of S&P 500. Our scale is so small compared to the market, and we have not seen any impact. However, we still limit the number of strategy subscribers to ensure a high quality.</li>
+                - Nasdaq-100 related products and their underlying holdings have HUGE trading volumes, similar to those of S&P 500. Our scale is so small compared to the market, and our strategy's trading frequency is low. No impact has been observed. However, we still limit the number of strategy subscribers to ensure a high quality.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>When is the trading signal sent, on each trading day?</b><br />
                 - Usually 30 minutes before market close, or one hour after market open.</li>
