--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
                         <ul class="list-unstyled">
 
-                          <li><i class="fa fa-chevron-circle-right"></i><b> 8 market crash indicators </b></li>
+                          <li><i class="fa fa-chevron-circle-right"></i><b> Eight market crash indicators </b></li>
 
                           <li><i class="fa fa-chevron-circle-right"></i><b> Best strategy to sell put </b></li>
 
