--- a/subscription.html
+++ b/subscription.html
@@ -64,7 +64,7 @@
       <div class="container">
         <p>
           <h3>We've migrated our payment service from Paypal to Patreon:<br></h3><br>
-          <h3><a href="https://www.patreon.com/risk_panda">https://www.patreon.com/risk_panda</a>  (click the link to continue)</h3>
+          <h4><a href="https://www.patreon.com/risk_panda">patreon.com/risk_panda</a>  (click the link to continue)</h4>
         </p>
         <p>
           <h3>The signal emails are not shown on the Patreon's page.
@@ -74,7 +74,7 @@
           <h3>How to start a free trial:<br>
           Join the <b>"Hassle-Free Investing"</b> membership plan.
           The payment date is 1st day of next month.
-          After you join, any dates before next month's 1st are your free trial period.</h3>
+          After you join, any dates before next month's 1st day are your free trial period.</h3>
           <br><br><br>
         </p>
       </div>
