--- a/subscription.html
+++ b/subscription.html
@@ -64,7 +64,7 @@
       <div class="container">
         <p>
           <h3>We've migrated our payment service from Paypal to Patreon:<br></h3><br>
-          <h4><a href="https://www.patreon.com/risk_panda">patreon.com/risk_panda</a>  (click the link to continue)</h4>
+          <h3><a href="https://www.patreon.com/risk_panda">patreon.com</a>  &nbsp; (click the link to continue)</h3>
         </p>
         <p>
           <h3>The signal emails are not shown on the Patreon's page.
