--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                   <li><b>$1.34</b>per day</li>
                 </ul>
                 <div class="table_btn">
-                  <a href="https://forms.gle/rVteUTFmdb2sYoeFA" class="btn"><i class="fa fa-shopping-cart"></i>FREE 2-Month Trial</a>
+                  <a href="https://forms.gle/rVteUTFmdb2sYoeFA" class="btn"><i class="fa fa-shopping-cart"></i>Subscribe</a>
                 </div>
               </div>
             </div>
