--- a/subscription.html
+++ b/subscription.html
@@ -61,7 +61,7 @@
     <section class="inner-page pt-4">
       <div class="container">
         <p>
-          <h3>We've migrated our payment service from Paypal to Patreon:<br></h3><br>
+          <h3>We've migrated our subscription service from Paypal to Patreon:<br></h3><br>
           <h3><a href="https://www.patreon.com/risk_panda">patreon.com</a>  &nbsp;(click the link to continue)</h3>
         </p>
         <p>
