--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>What to trade?</b><br />
                 - Usually Nasdaq-100 ETFs, like QQQ or QLD, or NQ/MNQ futures. based on your risk tolerance and account type. Details are in signal emails.
-                  We are also planning for options in the future.</li>
+                  We are also planning for other trading vehicles in separate strategies.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>If too many people follow, will the strategy be invalid?</b><br />
                 - Nasdaq-100 related products and their underlying holdings have HUGE trading volumes, similar to those of S&P 500. Our scale is so small compared to the market, and our strategy's trading frequency is low. No impact has been observed. However, we still limit the number of strategy subscribers to ensure a high quality.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>When is the trading signal sent, on each trading day?</b><br />
-                - Usually 30 minutes before market close, or one hour after market open.</li>
+                - Usually 30 minutes before market close.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>How are the signals generated?</b><br />
                 - AI-powered. The signals may be weird for humans' understanding, but it makes profit and has low drawdown in the LONG run. We may publish more info in the signal email in the future.</li>
@@ -158,13 +158,13 @@
                 - Invest with a small portion of your total portfolio. This amount of money should not affect your sleep. Otherwise it's easy to not follow the strategy strictly, leading to poor performance.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>Can I use the signal to trade my own stocks?</b><br />
-                - You can regard the signal as a market safety indicator (risk engine in hedge funds) and trade your own stocks, if you are an experienced trader.</li>
+                - You can regard the signal as a market safety indicator (risk engine in hedge funds) and trade your own stocks, if you are a very experienced trader.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>How long has the strategy existed?</b><br />
-                - The backtesting is back to 2003. The real trading started from 2012 (end of 2011, actually).</li>
+                - We combine multiple strategies together. The backtesting is back to 1999~2003 for different ones. The real trading started from 2012 (end of 2011, actually).</li>
                 
                 <li><i class="fa fa-chevron-circle-right"></i><b>Do you have other strategies?</b><br />
-                - Yes. We have more complex strategies which need some education for people to follow.</li>
+                - Yes. We are rolling out more strategies for our members to follow. Members will receive notifications.</li>
                 
                 <li><i class="fa fa-chevron-circle-right"></i><b>Will you manage funds directly?</b><br />
                 - Yes. Please contact us if you need this service, with a relatively large amount of money.</li>
