--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
   <footer class="footer">
     <div class="copyrights">
       <div class="container">
-        <p>&copy; Risk Panda. All rights reserved. All the content on this website does not constitute financial, accounting, or legal advice.</p>
+        <p>&copy; Risk Panda. Simple trading signal, delivered daily. All rights reserved. All the content on this website does not constitute financial, accounting, or legal advice.</p>
       </div>
     </div>
   </footer><!-- End  Footer -->
