--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           <li><a href="#about-us">FAQ</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#testimonials">Advanced Courses</a></li>
+          <li><a href="partnership.html">Partnership</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -90,7 +91,7 @@
 
               <img src="assets/img/svg/cloud.svg" alt="img" class="img-fluid">
               <h4>Principle</h4>
-              <p>Exit the market when risk is high, otherwise stay in the market. Managing risk is our top priority.</p>
+              <p>Exit the market when risk is high, otherwise stay in the market with a mix of great trading strategies. Managing risk is our top priority.</p>
 
             </div>
           </div>
@@ -161,8 +162,8 @@
                 - You can regard the signal as a market safety indicator (risk engine in hedge funds) and trade your own stocks, if you are a very experienced trader.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>How long has the strategy existed?</b><br />
-                - We combine multiple strategies together. The backtesting is back to 1999~2003 for different ones. The real trading started from 2012 (end of 2011, actually).</li>
-                
+                - We combine multiple trading strategies together. The backtesting is back to 1999~2003 for different ones. The real trading started from 2012 (end of 2011, actually).</li>
+
                 <li><i class="fa fa-chevron-circle-right"></i><b>Do you have other strategies?</b><br />
                 - Yes. We are rolling out more strategies for our members to follow. Members will receive notifications.</li>
                 
@@ -274,7 +275,7 @@
 
                           <li><i class="fa fa-chevron-circle-right"></i><b> Stock market rules and statistics </b></li>
 
-                          <li><i class="fa fa-chevron-circle-right"></i><b> Bitcoin strategies </b></li>
+                          <li><i class="fa fa-chevron-circle-right"></i><b> Bitcoin investment strategies </b></li>
 
                           <li><i></i> and much more ...</li>
 
