--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
           <li class="menu-active"><a href="index.html">Home</a></li>
           <li><a href="#about-us">FAQ</a></li>
           <li><a href="#pricing">Pricing</a></li>
-          <li><a href="#testimonials">Advanced Courses</a></li>
+          <li><a href="#courses">Advanced Courses</a></li>
+          <li><a href="careers.html">Careers</a></li>
+          <li><a href="brand_gallery.html">Brand Gallery</a></li>
           <li><a href="partnership.html">Partnership</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -243,8 +245,8 @@
 
 
 
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="padd-section text-left">
+    <!-- ======= Courses Section ======= -->
+    <section id="courses" class="padd-section text-left">
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
 
@@ -294,7 +296,7 @@
 
         </div>
       </div>
-    </section><!-- End Testimonials Section -->
+    </section><!-- End Courses Section -->
 
 
 
