--- a/brand_gallery.html
+++ b/brand_gallery.html
@@ -66,10 +66,19 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
+    <center>
+    <section>
+    <br>
+    Prometheus believes, fire is NOT only for gods, but also for mankind.
+    <br>
+    We deeply believe, hedge funds should NOT work only for the rich, but for everyone.
+    </section>
+    </center>
+
     <br>
     <center>
     <section>
-      <!-- <h3>Two Individual Images</h3> -->
+
       <div>
         <a class="risk-panda-gallery" href="images/risk_panda_phone_case.png" data-lightbox="risk-panda-gallery" data-title="Phone Case"><img class="risk-panda-gallery" src="images/risk_panda_phone_case_small.png" alt="image" /></a>
         <br>
