--- a/brand_gallery.html
+++ b/brand_gallery.html
@@ -66,16 +66,17 @@
       </div>
     </section><!-- End Breadcrumbs -->
 
+    <br><br>
     <center>
     <section>
-    <br>
-    Prometheus believes, fire is NOT only for gods, but also for mankind.
-    <br>
-    We deeply believe, hedge funds should NOT work only for the rich, but for everyone.
+      <b>Prometheus believes, fire is NOT only for gods, but also for mankind.</b>
+    <br><br>
+      <b>We deeply believe, hedge funds should NOT work only for the rich, but for everyone.</b>
     </section>
     </center>
 
-    <br>
+    <br><br>
+
     <center>
     <section>
 
@@ -84,11 +85,11 @@
         <br>
         <br>
         <br>
-        <a class="risk-panda-gallery" href="images/time_square_ads.jpg" data-lightbox="risk-panda-gallery" data-title="Time Square"><img class="risk-panda-gallery" src="images/time_square_ads_small.png" alt="image"/></a>
-        <br>
-        <br>
-        <br>
         <a class="risk-panda-gallery" href="images/station.jpg" data-lightbox="risk-panda-gallery"><img class="risk-panda-gallery" src="images/station_small.png" alt="image"/></a>
+        <br>
+        <br>
+        <br>
+        <a class="risk-panda-gallery" href="images/time_square_ads.jpg" data-lightbox="risk-panda-gallery" data-title="Time Square"><img class="risk-panda-gallery" src="images/time_square_ads_small.png" alt="image"/></a>
         <br>
         <br>
         <br>
