--- a/partnership.html
+++ b/partnership.html
@@ -66,7 +66,7 @@
             How it works: We will give you a <i><b>unique</b></i> coupon code (e.g., 10% off), then you can share this coupon code to attract customers.
           <br>
           <br>
-          For each customer you attract, we will share the profit with you each month. The sharing ratio would be <u><b>40%~55%</b></u> , depending on how many customers you bring.
+            For each customer you attract, we will share the profit with you each month. The sharing ratio would be <u><b>40%~55%</b></u> , depending on how many customers you bring.
           </h5>
         </p>
 
@@ -78,8 +78,33 @@
 
         <p>
           <h5>
-          Details: We will share the REAL profit with you, not the try-and-cancel ones. There would be 8% platform fee and 2.9%+$0.3 payment processing fee deducted ( https://www.patreon.com/pricing ).
+          Details: We will share the REAL profit with you, not the try-and-cancel ones. There would be 8% platform fee and 2.9%+$0.3 payment processing fee deducted by the third party ( https://www.patreon.com/pricing ).
+          <br>
+          For example, if subscription fee is $59.99, and the payout rate is 55%, you will get ($59.99x(1-(8%+2.9%))-$0.3)x55% = $29.23, <u><b>every month per customer</b></u>.
+          <br><br>
+          Payout rates, based on accumulated paid customers you bring:
+          <br><br>
+          <table style="width:15%">
+          <tr>
+            <th>Customers</th>
+            <th>Rate</th>
+          </tr>
+            <td>1~10</td>
+            <td>40%</td>
+          <tr>
+          </tr>
+            <td>10~100</td>
+            <td>50%</td>
+          <tr>
+          </tr>
+            <td> 100+ </td>
+            <td>55%</td>
+          <tr>
+          </tr>
+          </table>
+
           </h5>
+
         </p>
 
         <br>
