--- a/index.html
+++ b/index.html
@@ -115,12 +115,15 @@
               <h4>Relief</h4>
               <p>Simple signal, easy to follow, with confidence.</p>
 
+            </div>
           </div>
 
         </div>
       </div>
 
     </section><!-- End Get Started Section -->
+
+
 
     <!-- ======= About Us Section ======= -->
     <section id="about-us" class="about-us padd-section">
@@ -269,9 +272,11 @@
 
                           <li><i class="fa fa-chevron-circle-right"></i><b> Best strategy to sell put </b></li>
 
+                          <li><i class="fa fa-chevron-circle-right"></i><b> Build your own backtesting system </b></li>
+
                           <li><i class="fa fa-chevron-circle-right"></i><b> Best strategy for vertical spreads </b></li>
 
-                          <li><i class="fa fa-chevron-circle-right"></i><b> How to buy the dip with leverage when market crashes </b></li>
+                          <li><i class="fa fa-chevron-circle-right"></i><b> Best strategy to buy the dip with leverage when market crashes </b></li>
 
                           <li><i class="fa fa-chevron-circle-right"></i><b> Long-term portfolio building </b></li>
 
