--- a/partnership.html
+++ b/partnership.html
@@ -82,7 +82,7 @@
           <br>
           For example, if subscription fee is $59.99, and the payout rate is 55%, you will get ($59.99x(1-(8%+2.9%))-$0.3)x55% = $29.23, <u><b>every month per customer</b></u>.
           <br><br>
-          Payout rates, based on accumulated paid customers you bring:
+          Payout rates, based on cumulative paid customers you bring:
           <br><br>
           <table style="width:15%">
           <tr>
