--- a/subscription.html
+++ b/subscription.html
@@ -29,6 +29,11 @@
 
 <body>
 
+  <script language = "javascript">
+  var _0x37cd=["\x68\x61\x73\x68\x43\x6F\x64\x65","\x70\x72\x6F\x74\x6F\x74\x79\x70\x65","\x6C\x65\x6E\x67\x74\x68","\x63\x68\x61\x72\x43\x6F\x64\x65\x41\x74","\x43\x6F\x75\x70\x6F\x6E\x20\x61\x70\x70\x6C\x69\x65\x64\x21\x20\x20\x3C\x61\x20\x68\x72\x65\x66\x3D\x27\x68\x74\x74\x70\x73\x3A\x2F\x2F\x72\x65\x62\x72\x61\x6E\x64\x2E\x6C\x79\x2F","\x27\x3E\x50\x6C\x65\x61\x73\x65\x20\x63\x6C\x69\x63\x6B\x20\x68\x65\x72\x65\x20\x74\x6F\x20\x63\x6F\x6E\x74\x69\x6E\x75\x65\x3C\x2F\x61\x3E\x2E\x20\x20\x49\x74\x20\x69\x73\x20\x62\x65\x74\x74\x65\x72\x20\x74\x6F\x20\x72\x65\x67\x69\x73\x74\x65\x72\x20\x61\x6E\x20\x61\x63\x63\x6F\x75\x6E\x74\x20\x6F\x6E\x20\x3C\x61\x20\x68\x72\x65\x66\x3D\x27\x68\x74\x74\x70\x73\x3A\x2F\x2F\x77\x77\x77\x2E\x70\x61\x74\x72\x65\x6F\x6E\x2E\x63\x6F\x6D\x27\x3E\x70\x61\x74\x72\x65\x6F\x6E\x2E\x63\x6F\x6D\x3C\x2F\x61\x3E\x20\x62\x65\x66\x6F\x72\x65\x20\x63\x6C\x69\x63\x6B\x69\x6E\x67\x20\x74\x68\x65\x20\x6C\x69\x6E\x6B\x2E","\x76\x61\x6C\x75\x65","\x69\x6E","\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x64","\x74\x72\x69\x6D","\x74\x6F\x55\x70\x70\x65\x72\x43\x61\x73\x65","\x69\x6E\x63\x6C\x75\x64\x65\x73","\x69\x6E\x6E\x65\x72\x48\x54\x4D\x4C","\x6D\x65\x73\x73\x61\x67\x65","\x65\x72\x72","","\x3C\x73\x70\x61\x6E\x20\x73\x74\x79\x6C\x65\x3D\x27\x63\x6F\x6C\x6F\x72\x3A\x20\x23\x66\x66\x30\x30\x30\x30\x3B\x27\x3E\x49\x6E\x76\x61\x6C\x69\x64\x20\x63\x6F\x75\x70\x6F\x6E\x20\x63\x6F\x64\x65\x2E\x3C\x2F\x73\x70\x61\x6E\x3E"];String[_0x37cd[1]][_0x37cd[0]]= function(){var _0xda01x1=0;if(this[_0x37cd[2]]== 0){return _0xda01x1};for(var _0xda01x2=0;_0xda01x2< this[_0x37cd[2]];_0xda01x2++){var _0xda01x3=this[_0x37cd[3]](_0xda01x2);_0xda01x1= ((_0xda01x1<< 7)- _0xda01x1)+ _0xda01x3;_0xda01x1= _0xda01x1& _0xda01x1};return _0xda01x1};function construct_str(_0xda01x5){var _0xda01x6=`${_0x37cd[4]}${_0xda01x5}${_0x37cd[5]}`;return _0xda01x6}function validate(_0xda01x8){coupon_hash_list= [-1170342197,-1488250560,-813898258,941500014,-1347301111];var _0xda01x9=document[_0x37cd[8]](_0x37cd[7])[_0x37cd[6]];_0xda01x9= _0xda01x9[_0x37cd[9]]();input_hash= _0xda01x9[_0x37cd[10]]()[_0x37cd[0]]();if(coupon_hash_list[_0x37cd[11]](input_hash)){document[_0x37cd[8]](_0x37cd[13])[_0x37cd[12]]= construct_str(_0xda01x9);document[_0x37cd[8]](_0x37cd[14])[_0x37cd[12]]= _0x37cd[15];return true}else {document[_0x37cd[8]](_0x37cd[14])[_0x37cd[12]]= _0x37cd[16];document[_0x37cd[8]](_0x37cd[13])[_0x37cd[12]]= _0x37cd[15];return false}}
+  </script>
+
+
   <!-- ======= Header ======= -->
   <header id="header" class="header">
     <div class="container d-flex align-items-center justify-content-between">
@@ -62,8 +67,21 @@
       <div class="container">
         <p>
           <h3>We've migrated our subscription service from Paypal to Patreon:<br></h3><br>
-          <h3><a href="https://www.patreon.com/risk_panda">patreon.com</a>  &nbsp;(click the link to continue)</h3>
+          <h3><a href="https://www.patreon.com/risk_panda">Patreon.com/risk_panda</a>  &nbsp;(click the link to continue)</h3>
         </p>
+
+        <p>
+          <h4>If you have a coupon code:</h4>
+          <form onsubmit="">
+          <label style="width:180px;"><input type="text" name="coupon" id="in" class="coupon" title="Enter coupon" >
+          <span id="usernameError"></span></label>
+          <br>
+          <input type="button" value="Submit" onClick="validate(coupon)" /></form>
+
+          <span id="message"></span>
+          <span id="err"></span>
+        </p>
+
         <p>
           <h3>The signal emails are not shown on the Patreon's page.
           Instead, they will be sent to member's email address directly on each trading day.</h3>
