--- a/partnership.html
+++ b/partnership.html
@@ -78,7 +78,7 @@
 
         <p>
           <h5>
-          Details: We will share the REAL profit with you, not the try-and-cancel ones. There would be 8% platform fee and 2.9%+$0.3 payment processing fee deducted by the third party ( https://www.patreon.com/pricing ).
+          Details: The payout date is the 15th of each month. We will share the REAL profit with you, not the try-and-cancel ones. There would be 8% platform fee and 2.9%+$0.3 payment processing fee deducted by the third party ( https://www.patreon.com/pricing ).
           <br>
           For example, if subscription fee is $59.99, and the payout rate is 55%, you will get ($59.99x(1-(8%+2.9%))-$0.3)x55% = $29.23, <u><b>every month per customer</b></u>.
           <br><br>
