--- a/careers.html
+++ b/careers.html
@@ -74,7 +74,7 @@
             &#8729; Proficient in C++ and Python <br>
             &#8729; Deep understanding of the market <br>
             &#8729; Capable of working independently as well as part of a team <br>
-            &#8729; Award winner of IMO, IOI, ACM-ICPC is a plus <br>
+            &#8729; Award winner of IMO, IOI or ACM-ICPC is a plus <br>
           </h5>
 
           <br><br>
