--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li><a href="#courses">Advanced Courses</a></li>
           <li><a href="careers.html">Careers</a></li>
           <li><a href="brand_gallery.html">Brand Gallery</a></li>
-          <li><a href="partnership.html">Partnership</a></li>
+          <!--  <li><a href="partnership.html">Partnership</a></li>  -->
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
