--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                     <div class="top-top">
 
                       <h2 class="text-center">Advanced Courses</h2>
-                      <p>We plan to provide a list of unique, advanced courses for yearly subscribers:</p>
+                      <p>We plan to provide a list of unique, advanced courses if enough people are interested:</p>
 
                         <ul class="list-unstyled">
 
