Add Chinese Tutorial

--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
       <h2>Simple trading signal, delivered daily</h2>
       <img src="assets/img/cagr.png" alt="cagr" data-aos="zoom-out" data-aos-delay="100" width="1200">
       <a href="#pricing" class="btn-get-started scrollto">FREE Trial</a>
+      <a href="https://youtu.be/VeR3maNWrV4" class="btn-get-started scrollto">中文教程</a>
+      <a href="https://drive.google.com/file/d/1DYhmJ65kJMAnKSOXzL8Fvmu1Hqgbbu1b/view" class="btn-get-started scrollto">微信客服</a>
     </div>
   </section><!-- End Image Section -->
 
@@ -177,6 +179,10 @@
                 
                 <li><i class="fa fa-chevron-circle-right"></i><b>Will you manage funds directly?</b><br />
                 - Yes. Please contact us if you need this service, with a relatively large amount of money.</li>
+
+                <li><i class="fa fa-chevron-circle-right"></i><b>I'm in Europe, do I have similar trading vehicles?</b><br />
+                - Yes. Please look at the following website for ETF alternatives from Europe: <a href="https://europoor.com/how-to-buy-leveraged-etfs-from-europe/">https://europoor.com/how-to-buy-leveraged-etfs-from-europe/</a> </li>
+
 
               </ul>
 
