--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title text-center">
           <h2>Contact</h2>
-          <p class="separator">Any question, <a href="https://forms.gle/cJ7TAqTr6z864esJ8">contact us!</a></p>
+          <p class="separator">Any question or feedback, <a href="https://forms.gle/cJ7TAqTr6z864esJ8">contact us!</a></p>
         </div>
       </div>
     </section><!-- End Contact Section -->
