--- a/careers.html
+++ b/careers.html
@@ -79,7 +79,7 @@
 
           <br><br>
 
-          <h3>Site Reliability Engineer</h3><br>
+          <h3>Site Reliability Engineer (position filled)</h3><br>
           <h5>
             This role will have the primary responsibility for managing the real-time production trading environment for Risk Panda. It requires deep technical and operational knowledge across all areas of the trading platform in order to proactively monitor and troubleshoot our trading system, deploy changes to our production environment while minimizing operational risk, and implement tools and procedures to drive continuous improvement.
             <br>
