--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <img src="assets/img/cagr.png" alt="cagr" data-aos="zoom-out" data-aos-delay="100" width="1200">
       <a href="#pricing" class="btn-get-started scrollto">FREE Trial</a>
       <a href="https://youtu.be/VeR3maNWrV4" class="btn-get-started scrollto">中文教程</a>
-      <a href="https://docs.google.com/document/d/1S8eMiDzTqsk-te4Z2xtlEowiw4gVzxYjhGP6su6qraw" class="btn-get-started scrollto">微信客服</a>
+      <a href="https://docs.google.com/document/d/1S8eMiDzTqsk-te4Z2xtlEowiw4gVzxYjhGP6su6qraw" class="btn-get-started scrollto">Discord & WeChat (微信客服)</a>
     </div>
   </section><!-- End Image Section -->
 
@@ -334,7 +334,7 @@
   <footer class="footer">
     <div class="copyrights">
       <div class="container">
-        <p>&copy; Risk Panda. Simple trading signal, delivered daily. All rights reserved. All the content on this website does not constitute financial, accounting, or legal advice.</p>
+        <p>&copy; Risk Panda. Simple trading signal, delivered daily. All rights reserved. Any content on this website does not constitute financial, accounting, or legal advice.</p>
       </div>
     </div>
   </footer><!-- End  Footer -->
