--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 - By email.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>What to trade?</b><br />
-                - Usually Nasdaq-100 ETFs, like QQQ or QLD, or NQ/MNQ futures. based on your risk tolerance and account type. Details are in signal emails.
+                - Usually Nasdaq-100 ETFs, such as QQQ, QLD, TQQQ; or NQ/MNQ futures. It is also based on your risk tolerance and account type. Details are in signal emails.
                   We are also planning for other trading vehicles in separate strategies.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>If too many people follow, will the strategy be invalid?</b><br />
