--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 - Usually 30 minutes before market close.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>Is your strategy IRA-friendly?</b><br />
-                - Yes! It is low-frequency long-only stock trading. You can use it for 401k, Roth IRA or traditional IRA accounts.</li>
+                - Yes! It is low-frequency, long-only stock trading. You can use it for 401k, Roth IRA or traditional IRA accounts.</li>
 
                 <li><i class="fa fa-chevron-circle-right"></i><b>How are the signals generated?</b><br />
                 - AI-powered. The signals may be weird for humans' understanding, but it makes profit and has low drawdown in the LONG run. We may publish more info in the signal email in the future.</li>
