--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         <div class="section-title text-center">
 
           <h2>Price</h2>
-          <p class="separator">Simple pricing. No credit card needed.</p>
+          <p class="separator">Simple pricing.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
