Add Chinese Support

--- a/index.html
+++ b/index.html
@@ -50,14 +50,19 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div id="logo">
-        <h3><a href="index.html">risk-panda<small>.com </small></a></h3>
+        <!-- <h3><a href="index.html">risk-panda<small>.com </small></a></h3> -->
+
+        <h3><a href="https://www-risk--panda-com.translate.goog/?_x_tr_sl=en&_x_tr_tl=zh-CN&_x_tr_hl=en-US&_x_tr_pto=nui">简体中文</a></h3>
+
+        <h3><a href="https://www-risk--panda-com.translate.goog/?_x_tr_sl=en&_x_tr_tl=zh-TW&_x_tr_hl=en-US&_x_tr_pto=nui">繁體中文</a></h3>
+
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" title="" /></a>-->
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="index.html">Home</a></li>
+          <li class="menu-active"><a href="index.html">Risk Panda Home</a></li>
           <li><a href="#about-us">FAQ</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#courses">Advanced Courses</a></li>
@@ -213,7 +218,7 @@
         <div class="section-title text-center">
 
           <h2>Price</h2>
-          <p class="separator">Simple pricing.</p>
+          <p class="separator">Simple pricing</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
