--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <h2>Simple trading signal, delivered daily</h2>
       <img src="assets/img/cagr.png" alt="cagr" data-aos="zoom-out" data-aos-delay="100" width="1200">
       <a href="#pricing" class="btn-get-started scrollto">FREE Trial</a>
-      <a href="https://docs.qq.com/doc/p/928f7e4922559f5c6c39195378032f4b8e5a0d9f?dver=2.1.27266726" class="btn-get-started scrollto">中文教程</a>
+      <a href="https://docs.qq.com/doc/DVUtLSWJvdnByT0tr" class="btn-get-started scrollto">中文教程</a>
       <a href="https://docs.google.com/document/d/1S8eMiDzTqsk-te4Z2xtlEowiw4gVzxYjhGP6su6qraw" class="btn-get-started scrollto">Discord & WeChat (微信客服)</a>
     </div>
   </section><!-- End Image Section -->
